compiler/agentspeak/asl/AgentSpeakParser.py
# Generated from AgentSpeak.g4 by ANTLR 4.9
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class AgentSpeakParser ( Parser ):

    grammarFileName = "AgentSpeak.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'.'", "':-'", "'!'", "'@'", "':'", "'<-'", 
                     "'+'", "'-'", "'?'", "'~'", "'not'", "'&'", "'|'", 
                     "'('", "')'", "';'", "'!!'", "'-+'", "'['", "']'", 
                     "','", "'<'", "'<='", "'>'", "'>='", "'=='", "'\\=='", 
                     "'='", "'=..'", "'*'", "'**'", "'/'", "'div'", "'mod'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "ATOM", "NUMBER", 
                      "VAR", "STRING", "WS", "LC", "BC" ]

    RULE_agent = 0
    RULE_init_bels = 1
    RULE_beliefs = 2
    RULE_rules = 3
    RULE_init_goal = 4
    RULE_plan = 5
    RULE_triggering_event = 6
    RULE_literal = 7
    RULE_context = 8
    RULE_log_expr = 9
    RULE_simple_log_expr = 10
    RULE_body = 11
    RULE_body_formula = 12
    RULE_atomic_formula = 13
    RULE_list_of_terms = 14
    RULE_term = 15
    RULE_term_value = 16
    RULE_internal_action = 17
    RULE_list_structure = 18
    RULE_rel_expr = 19
    RULE_rel_term = 20
    RULE_arithm_expr = 21
    RULE_arithm_term = 22

    ruleNames =  [ "agent", "init_bels", "beliefs", "rules", "init_goal", 
                   "plan", "triggering_event", "literal", "context", "log_expr", 
                   "simple_log_expr", "body", "body_formula", "atomic_formula", 
                   "list_of_terms", "term", "term_value", "internal_action", 
                   "list_structure", "rel_expr", "rel_term", "arithm_expr", 
                   "arithm_term" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    ATOM=35
    NUMBER=36
    VAR=37
    STRING=38
    WS=39
    LC=40
    BC=41

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class AgentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def init_bels(self):
            return self.getTypedRuleContext(AgentSpeakParser.Init_belsContext,0)


        def plan(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AgentSpeakParser.PlanContext)
            else:
                return self.getTypedRuleContext(AgentSpeakParser.PlanContext,i)


        def init_goal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AgentSpeakParser.Init_goalContext)
            else:
                return self.getTypedRuleContext(AgentSpeakParser.Init_goalContext,i)


        def getRuleIndex(self):
            return AgentSpeakParser.RULE_agent

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAgent" ):
                listener.enterAgent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAgent" ):
                listener.exitAgent(self)




    def agent(self):

        localctx = AgentSpeakParser.AgentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_agent)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self.init_bels()
            self.state = 49 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 49
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [AgentSpeakParser.T__3, AgentSpeakParser.T__6, AgentSpeakParser.T__7]:
                    self.state = 47
                    self.plan()
                    pass
                elif token in [AgentSpeakParser.T__2]:
                    self.state = 48
                    self.init_goal()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 51 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << AgentSpeakParser.T__2) | (1 << AgentSpeakParser.T__3) | (1 << AgentSpeakParser.T__6) | (1 << AgentSpeakParser.T__7))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Init_belsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def beliefs(self):
            return self.getTypedRuleContext(AgentSpeakParser.BeliefsContext,0)


        def rules(self):
            return self.getTypedRuleContext(AgentSpeakParser.RulesContext,0)


        def getRuleIndex(self):
            return AgentSpeakParser.RULE_init_bels

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInit_bels" ):
                listener.enterInit_bels(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInit_bels" ):
                listener.exitInit_bels(self)




    def init_bels(self):

        localctx = AgentSpeakParser.Init_belsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_init_bels)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.beliefs()
            self.state = 54
            self.rules()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BeliefsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def literal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AgentSpeakParser.LiteralContext)
            else:
                return self.getTypedRuleContext(AgentSpeakParser.LiteralContext,i)


        def getRuleIndex(self):
            return AgentSpeakParser.RULE_beliefs

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBeliefs" ):
                listener.enterBeliefs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBeliefs" ):
                listener.exitBeliefs(self)




    def beliefs(self):

        localctx = AgentSpeakParser.BeliefsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_beliefs)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 56
                    self.literal()
                    self.state = 57
                    self.match(AgentSpeakParser.T__0) 
                self.state = 63
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RulesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def literal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AgentSpeakParser.LiteralContext)
            else:
                return self.getTypedRuleContext(AgentSpeakParser.LiteralContext,i)


        def log_expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AgentSpeakParser.Log_exprContext)
            else:
                return self.getTypedRuleContext(AgentSpeakParser.Log_exprContext,i)


        def getRuleIndex(self):
            return AgentSpeakParser.RULE_rules

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRules" ):
                listener.enterRules(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRules" ):
                listener.exitRules(self)




    def rules(self):

        localctx = AgentSpeakParser.RulesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_rules)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << AgentSpeakParser.T__9) | (1 << AgentSpeakParser.ATOM) | (1 << AgentSpeakParser.VAR))) != 0):
                self.state = 64
                self.literal()
                self.state = 65
                self.match(AgentSpeakParser.T__1)
                self.state = 66
                self.log_expr(0)
                self.state = 67
                self.match(AgentSpeakParser.T__0)
                self.state = 73
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Init_goalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def literal(self):
            return self.getTypedRuleContext(AgentSpeakParser.LiteralContext,0)


        def getRuleIndex(self):
            return AgentSpeakParser.RULE_init_goal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInit_goal" ):
                listener.enterInit_goal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInit_goal" ):
                listener.exitInit_goal(self)




    def init_goal(self):

        localctx = AgentSpeakParser.Init_goalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_init_goal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(AgentSpeakParser.T__2)
            self.state = 75
            self.literal()
            self.state = 76
            self.match(AgentSpeakParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PlanContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def triggering_event(self):
            return self.getTypedRuleContext(AgentSpeakParser.Triggering_eventContext,0)


        def atomic_formula(self):
            return self.getTypedRuleContext(AgentSpeakParser.Atomic_formulaContext,0)


        def context(self):
            return self.getTypedRuleContext(AgentSpeakParser.ContextContext,0)


        def body(self):
            return self.getTypedRuleContext(AgentSpeakParser.BodyContext,0)


        def getRuleIndex(self):
            return AgentSpeakParser.RULE_plan

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPlan" ):
                listener.enterPlan(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPlan" ):
                listener.exitPlan(self)




    def plan(self):

        localctx = AgentSpeakParser.PlanContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_plan)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==AgentSpeakParser.T__3:
                self.state = 78
                self.match(AgentSpeakParser.T__3)
                self.state = 79
                self.atomic_formula()


            self.state = 82
            self.triggering_event()
            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==AgentSpeakParser.T__4:
                self.state = 83
                self.match(AgentSpeakParser.T__4)
                self.state = 84
                self.context()


            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==AgentSpeakParser.T__5:
                self.state = 87
                self.match(AgentSpeakParser.T__5)
                self.state = 88
                self.body()


            self.state = 91
            self.match(AgentSpeakParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Triggering_eventContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def literal(self):
            return self.getTypedRuleContext(AgentSpeakParser.LiteralContext,0)


        def getRuleIndex(self):
            return AgentSpeakParser.RULE_triggering_event

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTriggering_event" ):
                listener.enterTriggering_event(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTriggering_event" ):
                listener.exitTriggering_event(self)




    def triggering_event(self):

        localctx = AgentSpeakParser.Triggering_eventContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_triggering_event)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            _la = self._input.LA(1)
            if not(_la==AgentSpeakParser.T__6 or _la==AgentSpeakParser.T__7):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==AgentSpeakParser.T__2 or _la==AgentSpeakParser.T__8:
                self.state = 94
                _la = self._input.LA(1)
                if not(_la==AgentSpeakParser.T__2 or _la==AgentSpeakParser.T__8):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 97
            self.literal()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiteralContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atomic_formula(self):
            return self.getTypedRuleContext(AgentSpeakParser.Atomic_formulaContext,0)


        def getRuleIndex(self):
            return AgentSpeakParser.RULE_literal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLiteral" ):
                listener.enterLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLiteral" ):
                listener.exitLiteral(self)




    def literal(self):

        localctx = AgentSpeakParser.LiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_literal)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==AgentSpeakParser.T__9:
                self.state = 99
                self.match(AgentSpeakParser.T__9)


            self.state = 102
            self.atomic_formula()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ContextContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def log_expr(self):
            return self.getTypedRuleContext(AgentSpeakParser.Log_exprContext,0)


        def ATOM(self):
            return self.getToken(AgentSpeakParser.ATOM, 0)

        def getRuleIndex(self):
            return AgentSpeakParser.RULE_context

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterContext" ):
                listener.enterContext(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitContext" ):
                listener.exitContext(self)




    def context(self):

        localctx = AgentSpeakParser.ContextContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_context)
        try:
            self.state = 106
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 104
                self.log_expr(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 105
                self.match(AgentSpeakParser.ATOM)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Log_exprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simple_log_expr(self):
            return self.getTypedRuleContext(AgentSpeakParser.Simple_log_exprContext,0)


        def log_expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AgentSpeakParser.Log_exprContext)
            else:
                return self.getTypedRuleContext(AgentSpeakParser.Log_exprContext,i)


        def getRuleIndex(self):
            return AgentSpeakParser.RULE_log_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLog_expr" ):
                listener.enterLog_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLog_expr" ):
                listener.exitLog_expr(self)



    def log_expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = AgentSpeakParser.Log_exprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 18
        self.enterRecursionRule(localctx, 18, self.RULE_log_expr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.state = 109
                self.simple_log_expr()
                pass

            elif la_ == 2:
                self.state = 110
                self.match(AgentSpeakParser.T__10)
                self.state = 111
                self.log_expr(4)
                pass

            elif la_ == 3:
                self.state = 112
                self.match(AgentSpeakParser.T__13)
                self.state = 113
                self.log_expr(0)
                self.state = 114
                self.match(AgentSpeakParser.T__14)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 126
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,12,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 124
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
                    if la_ == 1:
                        localctx = AgentSpeakParser.Log_exprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_log_expr)
                        self.state = 118
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 119
                        self.match(AgentSpeakParser.T__11)
                        self.state = 120
                        self.log_expr(4)
                        pass

                    elif la_ == 2:
                        localctx = AgentSpeakParser.Log_exprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_log_expr)
                        self.state = 121
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 122
                        self.match(AgentSpeakParser.T__12)
                        self.state = 123
                        self.log_expr(3)
                        pass

             
                self.state = 128
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,12,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Simple_log_exprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def literal(self):
            return self.getTypedRuleContext(AgentSpeakParser.LiteralContext,0)


        def rel_expr(self):
            return self.getTypedRuleContext(AgentSpeakParser.Rel_exprContext,0)


        def VAR(self):
            return self.getToken(AgentSpeakParser.VAR, 0)

        def getRuleIndex(self):
            return AgentSpeakParser.RULE_simple_log_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimple_log_expr" ):
                listener.enterSimple_log_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimple_log_expr" ):
                listener.exitSimple_log_expr(self)




    def simple_log_expr(self):

        localctx = AgentSpeakParser.Simple_log_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_simple_log_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.state = 129
                self.literal()
                pass

            elif la_ == 2:
                self.state = 130
                self.rel_expr()
                pass

            elif la_ == 3:
                self.state = 131
                self.match(AgentSpeakParser.VAR)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def body_formula(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AgentSpeakParser.Body_formulaContext)
            else:
                return self.getTypedRuleContext(AgentSpeakParser.Body_formulaContext,i)


        def getRuleIndex(self):
            return AgentSpeakParser.RULE_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBody" ):
                listener.enterBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBody" ):
                listener.exitBody(self)




    def body(self):

        localctx = AgentSpeakParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.body_formula()
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==AgentSpeakParser.T__15:
                self.state = 135
                self.match(AgentSpeakParser.T__15)
                self.state = 136
                self.body_formula()
                self.state = 141
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Body_formulaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def literal(self):
            return self.getTypedRuleContext(AgentSpeakParser.LiteralContext,0)


        def atomic_formula(self):
            return self.getTypedRuleContext(AgentSpeakParser.Atomic_formulaContext,0)


        def VAR(self):
            return self.getToken(AgentSpeakParser.VAR, 0)

        def rel_expr(self):
            return self.getTypedRuleContext(AgentSpeakParser.Rel_exprContext,0)


        def internal_action(self):
            return self.getTypedRuleContext(AgentSpeakParser.Internal_actionContext,0)


        def getRuleIndex(self):
            return AgentSpeakParser.RULE_body_formula

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBody_formula" ):
                listener.enterBody_formula(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBody_formula" ):
                listener.exitBody_formula(self)




    def body_formula(self):

        localctx = AgentSpeakParser.Body_formulaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_body_formula)
        self._la = 0 # Token type
        try:
            self.state = 148
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 142
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << AgentSpeakParser.T__2) | (1 << AgentSpeakParser.T__6) | (1 << AgentSpeakParser.T__7) | (1 << AgentSpeakParser.T__8) | (1 << AgentSpeakParser.T__16) | (1 << AgentSpeakParser.T__17))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 143
                self.literal()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 144
                self.atomic_formula()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 145
                self.match(AgentSpeakParser.VAR)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 146
                self.rel_expr()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 147
                self.internal_action()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Atomic_formulaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ATOM(self):
            return self.getToken(AgentSpeakParser.ATOM, 0)

        def VAR(self):
            return self.getToken(AgentSpeakParser.VAR, 0)

        def list_of_terms(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AgentSpeakParser.List_of_termsContext)
            else:
                return self.getTypedRuleContext(AgentSpeakParser.List_of_termsContext,i)


        def getRuleIndex(self):
            return AgentSpeakParser.RULE_atomic_formula

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtomic_formula" ):
                listener.enterAtomic_formula(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtomic_formula" ):
                listener.exitAtomic_formula(self)




    def atomic_formula(self):

        localctx = AgentSpeakParser.Atomic_formulaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_atomic_formula)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            _la = self._input.LA(1)
            if not(_la==AgentSpeakParser.ATOM or _la==AgentSpeakParser.VAR):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 155
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,16,self._ctx)
            if la_ == 1:
                self.state = 151
                self.match(AgentSpeakParser.T__13)
                self.state = 152
                self.list_of_terms()
                self.state = 153
                self.match(AgentSpeakParser.T__14)


            self.state = 161
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,17,self._ctx)
            if la_ == 1:
                self.state = 157
                self.match(AgentSpeakParser.T__18)
                self.state = 158
                self.list_of_terms()
                self.state = 159
                self.match(AgentSpeakParser.T__19)

